# TUM-AR-Virtual-Table-Tennis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
app/: CMakeLists.txt  main.cpp
cmake/: data_copy.cmake
data/: 1.model_loading.vs  ball.fbx  ball.mtl  fullscreen.fs  fullscreen.vs  racket.blend  racket.blend1  table.blend  table.blend1
libs/: CMakeLists.txt
libs/libframework/: CMakeLists.txt
libs/libframework/include/: ball_status.h  constant.h  geometry.h  infos.h  racket_status.h  requests.h  responses.h
libs/libnetwork/: CMakeLists.txt
libs/libnetwork/include/: client.h  convert.h  server.h
libs/libnetwork/proto/: network.proto
libs/libnetwork/src/libnetwork/: client.cpp  convert.cpp  server.cpp
libs/libnetwork/tests/: test_client.cpp
libs/librendering/: CMakeLists.txt
libs/librendering/include/glad/: glad.h
libs/librendering/include/librendering/: mesh.h  model.h  rendering_manager.hpp  rendering_settings.hpp
libs/librendering/src/glad/: glad.c
libs/librendering/src/librendering/: rendering_manager.cpp
libs/libtennis/: CMakeLists.txt
libs/libtennis/include/libtennis/: ball.hpp  collisionDetect.h  scoreboard.h  tennis_manager.h
libs/libtennis/src/libtennis/: ball.cpp  priv-header.h  priv-impl.cpp  scoreboard.cpp  tennis_manager.cpp
libs/libtennis/tests/: CMakeLists.txt  main.cpp
libs/libvision/: CMakeLists.txt
libs/libvision/include/libvision/: vision_manager.hpp  vision_settings.hpp
libs/libvision/src/libvision/: vision_manager.cpp
